--- a/Logistics/Logistics.csproj
+++ b/Logistics/Logistics.csproj
@@ -198,6 +198,8 @@
     <Content Include="LC\Business\MeetCar\LC_IndexMC.aspx" />
     <Content Include="LC\Business\MeetCar\LC_Success.aspx" />
     <Content Include="LC\Business\ReceiptGood\LC_HistoryEdit.aspx" />
+    <Content Include="LC\Customer\SignGood\LC_ApplyGiveGood.aspx" />
+    <Content Include="LC\Customer\SignGood\LC_GiveSuccess.aspx" />
     <Content Include="LC\OperationOverview\LC_Index.aspx" />
     <Content Include="LC\Business\PaymentDay\LC_PaymentDay.aspx" />
     <Content Include="LC\Business\PretendCar\LC_Commodity.aspx" />
@@ -589,6 +591,20 @@
     </Compile>
     <Compile Include="LC\Business\ReceiptGood\LC_HistoryEdit.aspx.designer.cs">
       <DependentUpon>LC_HistoryEdit.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="LC\Customer\SignGood\LC_ApplyGiveGood.aspx.cs">
+      <DependentUpon>LC_ApplyGiveGood.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LC\Customer\SignGood\LC_ApplyGiveGood.aspx.designer.cs">
+      <DependentUpon>LC_ApplyGiveGood.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="LC\Customer\SignGood\LC_GiveSuccess.aspx.cs">
+      <DependentUpon>LC_GiveSuccess.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LC\Customer\SignGood\LC_GiveSuccess.aspx.designer.cs">
+      <DependentUpon>LC_GiveSuccess.aspx</DependentUpon>
     </Compile>
     <Compile Include="LC\OperationOverview\LC_Index.aspx.cs">
       <DependentUpon>LC_Index.aspx</DependentUpon>
