--- a/Logistics/Web.config
+++ b/Logistics/Web.config
@@ -27,7 +27,8 @@
   </appSettings>
   <connectionStrings>
     <!--<add connectionString="Data Source=192.168.0.201;Database=Logistics;User ID=sa;Pwd=sa199888" name="db" />-->
-    <add connectionString="Data Source=192.168.0.239;Database=Logistics;User ID=wxl;Pwd=wowotang88899" name="db" />
+    <add connectionString="Data Source=OD9TFRZZTCMWBUR\MSSQLSERVER2014;Database=Logistics;User ID=sa;Pwd=sa199888" name="db" />
+    <!--<add connectionString="Data Source=192.168.0.239;Database=Logistics;User ID=wxl;Pwd=wowotang88899" name="db" />-->
   </connectionStrings>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
