--- a/Logistics/packages.config
+++ b/Logistics/packages.config
@@ -9,6 +9,13 @@
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.4.1" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.4.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Client.zh-Hans" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Core.zh-Hans" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.WebHost.zh-Hans" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="2.3.0" targetFramework="net46" developmentDependency="true" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net46" />
